--- a/app/views/carpools/index.html.erb
+++ b/app/views/carpools/index.html.erb
@@ -8,12 +8,12 @@
 
 <div class="top">
 
+
 	<div class="center">
 		<div class="title">
 			<h1>Rideshare Admin</h1>
 		</div>
 	</div>
-
 
 	<div class="left">		
 		<table class="shown">
@@ -44,7 +44,6 @@
 		</table>
 	</div>
 
-
 	<div class="right">
 		<div>
 			<a href="/carpool/report" 
@@ -57,6 +56,8 @@
 			>Show Non-Participants</a>
 		</div>
 	</div>
+
+	
 </div>
 
 
@@ -173,7 +174,7 @@
 <!-- ====================================================================== -->
 <!-- google map -->
 
-<script type="text/javascript" src="http://www.google.com/jsapi?key=<%=GOOGLE_KEY%>"></script>
+<script type="text/javascript" src="http://www.google.com/jsapi?key=<%=GOOGLE_MAPS2_KEY%>"></script>
 <script type="text/javascript"> 
 		
 	google.load("maps", "2", {"other_params":"sensor=false"});
