--- a/app/assets/stylesheets/carpool.css.sass
+++ b/app/assets/stylesheets/carpool.css.sass
@@ -1,3 +1,17 @@
+#map_canvas
+	height: 100%
+	width: 100%
+	top: 100px
+
+html
+	height: 100%
+
+body
+	height: 100%
+	margin: 0
+	padding: 0
+
+
 
 // ========================================================================= 
 //  top area
