--- a/app/views/carpools/index.html.erb
+++ b/app/views/carpools/index.html.erb
@@ -1,23 +1,391 @@
-<script type="text/javascript">
- 
-	function initialize() {
-	  var myOptions = {
-	    zoom: 8,
-	    center: new google.maps.LatLng(-34.397, 150.644),
-	    mapTypeId: google.maps.MapTypeId.ROADMAP
-	  }
-	  var map = new google.maps.Map(document.getElementById("map"), myOptions);
-	}
+<!-- ====================================================================== -->
+<!-- top div -->
 
-	function loadScript() {
-	  var script = document.createElement("script");
-	  script.type = "text/javascript";
-	  script.src = "http://maps.googleapis.com/maps/api/js?key=AIzaSyBYZt7gPZCyszhbw5Xsw73-l9uwkjEQL98&sensor=true&callback=initialize";
-	  document.body.appendChild(script);
-	}
+<div class="top">
 
-	window.onload = loadScript;
+	<div class="center">
+		<div class="title">
+			<h1>Rideshare Admin</h1>
+		</div>
+	</div>
 
-</script>
+	<div class="left">		
+		<table class="shown">
+			<tr>
+				<td>
+					<button onClick="$('.top .left .hidden').toggle();">
+						Legend &nbsp;&nbsp;&nbsp;<img src="/images/arrow.png" alt="arrow" />
+					</button>
+				</td>
+				<td>
+					<button onClick="location.href=http://wiki.uscm.org/download/attachments/56492347/CRS+RideShare+Feature.ppt?version=1&modificationDate=1262886674000" target="_blank">
+						Help?
+					</button>
+				</td>
+			</tr>
+		</table>
+		<table class="hidden">
+			<tr>
+				<td><img src="/images/AD.png" alt="Available Driver" /></td><td>Available Driver</td>
+				<td><img src="/images/AR.png" alt="Available Rider" /></td><td>Available Rider</td>
+				<td><img src="/images/selected.png" alt="Selected" /></td><td>Selected Driver/Rider</td>
+			</tr>
+			<tr>
+				<td><img src="/images/UD.png" alt="Unavailable Driver" /></td><td>Driver with Full Car</td>
+				<td><img src="/images/UR.png" alt="Unavailable Rider" /></td><td>Assigned Rider</td>
+				<td><img src="/images/AD_AR_UD_UR.png" alt="Available Driver, Available Rider, Unavailable Driver, Unavailable Rider" /></td><td>Location with all four types</td>
+			</tr>
+		</table>
+	</div>
 
-<div id="map"></div>
+	<div class="right">
+		<div>
+			<a href="/carpool/report" 
+			title="This produces a printable list of all of the people organized by drivers"
+			>Printable Report</a><br/>
+			<a href="/report/all" 
+			title="This brings you to a page that allows you to set up an e-mail to notify everyone of their ride assignments">Email Setup</a><br/>
+			<a href="javascript:displayMessage('hidden_users');" 
+			title="This lists all of the people that are not included in RideShare, but have registered for the conference"
+			>Show Non-Participants</a>
+		</div>
+	</div>
+
+	
+</div>
+
+
+<!-- ====================================================================== -->
+<!-- message area -->
+
+<div class="message"> </div>
+
+<div id="message_block"></div>
+<div id="flash_message" class="message" style="width:600px;height:360px;">
+	<% if @help_rides.size > 0 %>
+		<%= @through %>
+		<h2>Invalid Addresses</h2>
+		These locations cannot be computed. Please change to a valid address (Address Line 1 is street address, Address Line 2 is extra information - Apartment, Room #, etc.).
+		<% form_tag :action => :update_addresses do %>
+			<% i=0; %>
+			<% @help_rides.each do |ride| %>
+				<h4><%= ride.person.full_name%></h4>
+				<%= hidden_field :ride, :id, :name => "ride[#{i}][id]" %>
+				<table>
+					<tr><td><%= label :ride, :address1, "Address Line 1" %>:&nbsp;</td><td><%= text_field :ride, :address1, :name => "ride[#{i}][address1]" %></td></tr>
+					<tr><td><%= label :ride, :address2, "Address Line 2" %>:&nbsp;</td><td><%= text_field :ride, :address2, :name => "ride[#{i}][address2]" %></td></tr>
+					<tr><td><%= label :ride, :city %>:&nbsp;</td><td><%= text_field :ride, :city, :name => "ride[#{i}][city]" %></td></tr>
+					<tr><td><%= label :ride, :state %>:&nbsp;</td><td><%= text_field :ride, :state, :size => 2, :name => "ride[#{i}][state]" %></td></tr>
+					<tr><td><%= label :ride, :zip %>:&nbsp;</td><td><%= text_field :ride, :zip, :size => 5, :name => "ride[#{i}][zip]" %></td></tr>
+				</table>
+				<% i+=1 %>
+			<% end %>
+			<%= submit_tag %>
+		<% end %>
+	<% end %>
+	<a href="javascript:hideMessage('flash');" class="message_exit" onmouseclick="hideMessage('flash');">X</a>
+</div>
+
+
+<div id="hidden_users_message" class="message">
+	<h2>Registrants not Participating in Rideshare</h2>
+	<% i=0 %>
+	<% @hidden_rides.each do |ride| %>
+		<a href="/carpool/register/<%= ride.id %>"><%= ride.person.full_name%></a><br />
+		<% i=i+1 %>
+	<% end %>
+	<%="There are no users who do not need a ride." if i == 0%>
+	<a href="javascript:hideMessage('hidden_users');" class="message_exit" onmouseclick="hideMessage('hidden_users');">X</a>
+</div>
+<div id="update_address_message" class="message" style="width:400px;height:215px;">
+	<h2 id="update_address_name"></h2>
+		<% form_tag :url => {:action => :update_address}, :success => 'updateAddressCallback(request)', :failure => 'alert("Failed to update address.")', :remote => true do %>	
+			<input type="hidden" name="rideID" id="update_address_rideID" />
+			<table>
+				<tr>
+					<td>
+						<label for="update_address_address1">Address Line 1</label>:&nbsp;
+					</td>
+					<td>
+						<input type="text" name="address1" id="update_address_address1" size="30" />
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<label for="update_address_address2">Address Line 2</label>:&nbsp;
+					</td>
+					<td>
+						<input type="text" name="address2" id="update_address_address2" size="30" />
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<label for="update_address_city">City</label>:&nbsp;</td><td><input type="text" name="city" id="update_address_city" size="30" />
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<label for="update_address_state">State</label>:&nbsp;
+					</td>
+						<td>
+							<input type="text" name="state" id="update_address_state" size="2" />
+						</td>
+					</tr>
+				<tr>
+					<td>
+						<label for="update_address_zip">Zip</label>:&nbsp;</td><td><input type="text" name="zip" id="update_address_zip" size="5" />
+					</td>
+				</tr>
+			</table>
+			<button onclick="hideMessage('update_address');">Cancel</button> <%= submit_tag %>
+		<% end %>
+	<a href="javascript:hideMessage('update_address');" class="message_exit" onmouseclick="hideMessage('update_address');">X</a>
+</div>
+
+
+<!-- ====================================================================== -->
+<!-- help messages -->
+
+<div class="message">
+	<div id="how_select_driver">
+		<h2>Selecting a Driver</h2>
+		To "Select" a driver, click on their name in the list or icon (green) on the map. Click the "Select Driver" link in the pop-up bubble to begin assigning riders to the driver. To assign a rider, click their name/icon and click "Add to Car". To assign riders to a different car, select a different driver using the same method.
+		
+		<!-- comment_here 
+		<a href="javascript:hideMessage('driver_help');" class="message_exit" onmouseclick="hideMessage('driver_help');">X</a>
+		-->
+
+	</div>
+	<div id="where_did_they_go">
+		<h2>Where did they go?</h2>
+		By default, only people who need attention are visible (i.e. drivers with empty spaces and riders with no ride), while people who don't need attention are hidden (i.e. drivers with full cars and riders with a ride). The "Show and Hide" link on the bottom left contains options for changing which riders/drivers are displayed. Similarly, people will be displayed based on departure time by using the "Departure Time" link below the lists - all departure times are shown by default.
+		<a href="javascript:hideMessage('filters_help');" class="message_exit" onmouseclick="hideMessage('filters_help');">X</a>
+	</div>	
+</div>
+
+
+<!-- ====================================================================== -->
+<!-- google map -->
+
+<div id="map-index"> google map here </div>
+
+
+<!-- ====================================================================== -->
+<!-- driver table -->
+
+<div id="leftheader">
+	<h3 class="title">
+		<%=@drivers.size%> Drivers - <span id="spaces_remaining"><%=@spaces-@riders_done%></span>/<%=@spaces%> Seats
+	</h3>
+	<p class="text">
+		<button onClick="$('.message #test').toggle();"><strong>How do I select a driver?</strong></button><br/>
+		<strong>No Driver Selected</strong><br/>
+	</p>
+</div>
+
+<div class="drivers">
+	<div class="table" >
+		<ul id="selected_driver">
+			<!-- Will be filled with current driver automagically -->
+		</ul>
+		<ul>
+			<% @drivers.each do |driver| %>
+				<li id="driver<%=driver.id%>">
+					<a href="javascript:map.setCenter(drivers[<%=driver.id%>]['marker'].getLatLng(), 14);showMarker(drivers[<%=driver.id%>]['location'], <%=driver.id%>);" ondblclick="double_click_driver(<%=driver.id%>);return false;"><%= driver.person.full_name %>
+					</a> (<%= driver.numbercurrentpassengers %>/<%= driver.number_passengers %>)
+				</li>
+			<% end %>
+		</ul>
+		<div style="padding:2px;margin-top:20px;">
+			<a href="javascript:displayMessage('filters_help');"><strong>Where did they go?</strong></a>
+		</div>
+	</div>
+</div>
+
+
+<!-- ====================================================================== -->
+<!-- rider table -->
+
+<div id="rightheader">
+	<h3 class="title">
+		<%=@riders.size%> Riders - (<span id="riders_remaining"><%=@riders.size - @riders_done%></span> Unassigned)
+	</h3>
+	<p class="title">
+		<button onClick="$('#filters_help_message').toggle();"><strong>Where did they go?</strong></button>
+	</p>
+</div>
+
+<div class="riders">
+	<div class="table">
+		<ul id="selected_riders">
+			<!-- Will be filled with riders automagically -->
+		</ul>
+		<ul>
+			<% @riders.each do |rider| %>
+				<li id="rider<%=rider.id%>">
+					<%='<img src="/images/check.png" alt="Done" title="This person has already been assigned." />' if rider.driver_ride_id != 0%>
+					<a href="javascript:map.setCenter(riders[<%=rider.id%>]['marker'].getLatLng(), 14);showMarker(riders[<%=rider.id%>]['location'], <%=rider.id%>);" ondblclick="double_click_rider(<%=rider.id%>);return false;"><%= rider.person.full_name %></a> 
+					(<%= rider.city %>)
+				</li>
+			<% end %>
+		</ul>
+	</div>
+</div>
+
+
+<!-- ====================================================================== -->
+<!-- options and filtering table -->
+
+<div class="options">
+
+
+	<!-- ====================================================================== -->
+	<!-- EARLIEST // LATEST -->
+
+	<div class="departure_time">
+			
+		<table class="room">
+			<tr>
+				<th class="title" colspan="2">Earliest</th>
+				<th class="title" >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Latest</th>
+				<th class="button" ><button onClick="$('.departure_time').hide();">&nbsp;X&nbsp;</button></th>
+			</tr>
+			<tr>
+				<td><img src="images/clock-icon.png" alt="clock" style="width:25px;height:25px;" />&nbsp;
+					
+					<select name="options_box_departure_time_time1_hour" 
+									id="options_box_departure_time_time1_hour" 
+									onchange="updateDepartureTime1(true);">
+						<option value="1">1</option>
+						<option value="2">2</option>
+						<option value="3">3</option>
+						<option value="4">4</option>
+						<option value="5">5</option>
+						<option value="6">6</option>
+						<option value="7">7</option>
+						<option value="8">8</option>
+						<option value="9">9</option>
+						<option value="10">10</option>
+						<option value="11">11</option>
+						<option value="12">12</option>
+					</select>
+					
+					<select name="options_box_departure_time_time1_minute" 
+									id="options_box_departure_time_time1_minute" 
+									onChange="updateDepartureTime1(true);">
+						<option value="00">00</option>
+						<option value="15">15</option>
+						<option value="30">30</option>
+						<option value="45">45</option>
+					</select>
+				
+					<select name="options_box_departure_time_time1_ampm" 
+									id="options_box_departure_time_time1_ampm" 
+									onchange="updateDepartureTime1(true);">
+						<option value="0">AM</option>
+						<option value="12">PM</option>
+					</select>
+				</td>
+				
+
+				<td>
+					<input 	type="checkbox"
+									name="options_box_departure_time_use1"
+									id="options_box_departure_time_use1"
+									onclick="updateDepartureTime1(false);"
+									/>
+				</td>
+				
+				<td><img 	src="images/clock-icon.png" 
+									alt="clock" 
+									style="width:25px;height:25px;" />&nbsp;
+					<select name="options_box_departure_time_time2_hour" 
+									id="options_box_departure_time_time2_hour" 
+									onchange="updateDepartureTime2(true);">
+						<option value="1">1</option>
+						<option value="2">2</option>
+						<option value="3">3</option>
+						<option value="4">4</option>
+						<option value="5">5</option>
+						<option value="6">6</option>
+						<option value="7">7</option>
+						<option value="8">8</option>
+						<option value="9">9</option>
+						<option value="10">10</option>
+						<option value="11">11</option>
+						<option value="12">12</option>
+					</select>
+					<select name="options_box_departure_time_time2_minute" 
+									id="options_box_departure_time_time2_minute" 
+									onChange="updateDepartureTime2(true);">
+						<option value="00">00</option>
+						<option value="15">15</option>
+						<option value="30">30</option>
+						<option value="45">45</option>
+					</select>
+					<select name="options_box_departure_time_time2_ampm" 
+									id="options_box_departure_time_time2_ampm" 
+									onchange="updateDepartureTime2(true);">
+						<option value="0">AM</option>
+						<option value="12">PM</option>
+					</select>
+				</td>
+				<td>
+					<input type="checkbox" 
+					name="options_box_departure_time_use2" 
+					id="options_box_departure_time_use2" 
+					onclick="updateDepartureTime2(false);" />
+				</td>
+			</tr>
+		</table>
+	</div>
+
+	<!-- ====================================================================== -->
+	<!-- SHOW AND HIDE -->
+
+	<!-- TODO FIX SHOW AND HIDE -->
+
+	<div class="showhide">
+		<table>
+			<tr>
+				<th>Filtering Options</th>
+				<th><button onClick="$('.showhide').hide();">&nbsp;X&nbsp;</button></th>
+			</tr>
+			<tr>
+				<td>Show riders without a ride and drivers with open seats:</td>
+				<td><input type="checkbox" 
+										name="options_box_availability_available" 
+										id="options_box_availability_available" 
+										checked="checked" 
+										onClick="updateList();" /></td>
+			</tr>
+			<tr>
+				<td>Show riders with a ride and drivers with a full car:</td>
+				<td><input 	type="checkbox" 
+										name="options_box_availability_assigned" 
+										id="options_box_availability_assigned" 
+										onClick="updateList();" /></td>
+			</tr>
+		</table>
+	</div>
+
+
+	<!-- ====================================================================== -->
+	<!-- FOUNDATION TABLE -->
+
+	<div class="foundation">
+		<table>
+			<tr>
+				<td class="left"><button onClick="$('.departure_time').toggle();">Departure Time <img src="/images/up_arrow.png" alt="arrow" /></button></td>
+				<td class="right"><button onClick="$('.showhide').toggle();">Filter Options<img src="/images/up_arrow.png" alt="arrow"/></button>
+				</td>
+			</tr>
+		</table>
+	</div>
+
+
+<!-- ====================================================================== -->
+<!-- end of options table -->
+
+
+</div>
