--- a/app/assets/stylesheets/report.css.sass
+++ b/app/assets/stylesheets/report.css.sass
@@ -2,7 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.top
+1px solid #000.top
 	.left
 		margin: 20px
 	.center
