--- a/app/views/carpools/register.html.erb
+++ b/app/views/carpools/register.html.erb
@@ -2,7 +2,108 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:v="urn:schemas-microsoft-com:vml"> 
 <head> 
 <title>Campus Crusade Carpool Coordinator</title> 
-<script type="text/javascript" src="http://www.google.com/jsapi?key=<%=GOOGLE_KEY%>"></script>
+<script type="text/javascript" src="http://www.google.com/jsapi?key=<%=GOOGLE_MAPS2_KEY%>"></script>
+
+<script type="text/javascript">
+	google.load("maps", "2", {"other_params":"sensor=false"});
+		var map;
+		var geocoder;
+		var marker;
+		var state = 0;
+		var mapped = 0;
+		
+		function initialize() {
+			map = new google.maps.Map2(document.getElementById("map"));
+			geocoder = new GClientGeocoder();
+			document.getElementById("error").style.display = "none";
+			document.getElementById("driver").style.display = "none";
+			document.getElementById("address").style.display = "none";
+			document.getElementById("rider_address").style.display = "none";
+			document.getElementById("driver_address").style.display = "none";
+			document.getElementById("driver_change").style.display = "none";
+			document.getElementById("arrange1").style.display = "none";
+			document.getElementById("arrange2").style.display = "none";
+			document.getElementById("map").style.display = "none";
+			document.getElementById("map_description").style.display = "none";
+			document.getElementById("submit").disabled = "disabled";
+			situation_callback();
+			special_info_callback();
+			check_address();
+		}
+		google.setOnLoadCallback(initialize);
+		
+		function situation_callback() {
+			document.getElementById("driver_address").style.display = "none";
+			document.getElementById("rider_address").style.display = "none";
+			document.getElementById("driver").style.display = "none";
+			document.getElementById("driver_change").style.display = "none";
+			if (document.getElementById("situation_drive").checked || document.getElementById("situation_ride").checked) {
+				if (document.getElementById("situation_drive").checked) {
+					document.getElementById("driver_address").style.display = "";
+					document.getElementById("driver").style.display = "";
+					document.getElementById("driver_change").style.display = "";
+				} else {
+					document.getElementById("rider_address").style.display = "";
+				}
+				document.getElementById("address").style.display = "";
+				document.getElementById("arrange1").style.display = "";
+				document.getElementById("arrange2").style.display = "";
+				state = 0;
+				if (mapped) {
+					document.getElementById("submit").disabled = "";
+				} else {
+					document.getElementById("submit").disabled = "disabled";
+				}
+			} else {
+				document.getElementById("driver").style.display = "none";
+				document.getElementById("address").style.display = "none";
+				document.getElementById("arrange1").style.display = "none";
+				document.getElementById("arrange2").style.display = "none";
+				state = 1;
+				document.getElementById("submit").disabled = "";
+			}
+		}
+		
+		function special_info_callback() {
+			if (document.getElementById("special_info_check_yes").checked) {
+				document.getElementById("special_info").style.display = "";
+			} else {
+				document.getElementById("special_info").style.display = "none";
+			}
+		}
+		
+		function check_address() {
+			document.getElementById("map").style.display = "none";
+			document.getElementById("map_description").style.display = "none";
+			var address;
+			address = (/^\d/.test(document.getElementById("address_2").value))?document.getElementById("address_2").value:document.getElementById("address_1").value;
+			address += ", "+document.getElementById("city").value+", "+document.getElementById("state").value+" "+document.getElementById("zip").value;
+			geocoder.getLatLng(address, function(latlng) {
+				if (marker) {
+					map.removeOverlay(marker);
+				}
+				if (latlng != null) {
+					document.getElementById("map").style.display = "";
+					document.getElementById("map_description").style.display = "";
+					marker = new GMarker(latlng);
+					map.addOverlay(marker);
+					map.setCenter(latlng, 15);
+					document.getElementById("error").style.display = "none";
+					if (!state) {
+						document.getElementById("submit").disabled = "";
+					}
+					mapped = 1;
+				} else {
+					document.getElementById("error").style.display = "";
+					if (!state) {
+						document.getElementById("submit").disabled = "disabled";
+					}
+					mapped = 0;
+				}
+			});
+		}
+</script>
+
 <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/2.6.0/build/reset/reset-min.css" />
 <style type="text/css">
 	body{
